Fix gpg box not overflowing correctly

--- a/homepage/assets/style.css
+++ b/homepage/assets/style.css
@@ -415,6 +415,7 @@ pre {
     background: #ddd;
     padding: 10px;
     font-size: 12px;
+    overflow: auto;
 }
 
 h1.compact, h2.compact, h3.compact {
